@@ -15,8 +15,10 @@ package org.jdbi.v3.core.array;
 
 import java.lang.reflect.Type;
 import java.util.Optional;
+import java.util.function.Function;
 
 import org.jdbi.v3.core.config.ConfigRegistry;
+import org.jdbi.v3.core.generic.GenericTypes;
 
 /**
  * Factory interface to produce {@link SqlArrayType} instances.
@@ -32,4 +34,18 @@ public interface SqlArrayTypeFactory {
      * @see SqlArrayTypes#findFor(Type)
      */
     Optional<SqlArrayType<?>> build(Type elementType, ConfigRegistry config);
+
+    /**
+     * Create a SqlArrayTypeFactory for the given {@code elementType} that binds using a
+     * type name and convert function.
+     * @param elementType the array element type
+     * @param typeName the database type name to bind as
+     * @param conversion the function to convert to jdbc representation
+     * @return the built factory
+     * @see SqlArrayType#of(String, Function)
+     */
+    static <T> SqlArrayTypeFactory of(Class<T> elementType, String typeName, Function<T, ?> conversion) {
+        final Optional<SqlArrayType<?>> arrayType = Optional.of(SqlArrayType.of(typeName, conversion));
+        return (t, c) -> elementType == GenericTypes.getErasedType(t) ? arrayType : Optional.empty();
+    }
 }
